# Gitlepy

./: .flake8  README.md  dev-requirements.txt  mypy.ini  pyproject.toml  requirements.txt  test_main.py
gitlepy/: main.py  repository.py
src/gitlepy/: __init__.py  __main__.py  blob.py  commit.py  index.py  repository.py
tests/: conftest.py  test_branch.py  test_checkout.py  test_commit.py  test_index.py  test_init.py  test_main.py  test_merge.py  test_status.py  test_unstaged_modications.py
