# pyproject.toml
[project]
name = "gitlepy"
version = "0.1.0"
authors = [
    {name = "David Rambo", email = "davidrambo@mailfence.com"},
]
description = "A Python implementation of UCB 61B's Gitlet project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click==8.1.3"
]

[project.urls]
homepage = "http://github.com/DavidRambo/gitlepy"
repository = "http://github.com/DavidRambo/gitlepy"

[project.optional-dependencies]
dev = [
    "black==23.1.0",
    "coverage==7.1.0",
    "flake8==6.0.0",
    "mypy==1.0.0",
    "mypy-extensions==1.0.0",
    "pycodestyle==2.10.0",
    "pyflakes==3.0.1",
    "pyproject_hooks==1.0.0",
    "pytest==7.2.1",
    "pytest-cov==4.0.0",
    "toml==0.10.2",
    "typing_extensions==4.4.0",
]

[project.scripts]
gitlepy = "gitlepy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib",]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["gitlepy"]

[tool.coverage.report]
show_missing = true
fail_under = 100
